<resources>
    <string name="app_name">Wireless Controller</string>
    <string name="enable_service">Enable service</string>
    <string name="stop_service_in_airplane_mode">Stop service in Airplane mode</string>
    <string name="enable_whitelist">Use white list</string>
    <string name="add_current_wifi_to_whitelist">Add current Wi-Fi</string>
    <string name="enable_wifi">Please enable Wi-Fi and connect to network you want to add</string>
    <string name="connect_to_wifi">Please connect to Wi-Fi network</string>
    <string name="already_in_whitelist">Current Wi-Fi network already in white list</string>
    <string name="added_to_whitelist">Wi-Fi network added to white list</string>
    <string name="ssid_bssid">%1$s (%2$s)</string>
    <string name="wifi_whitelist_name">Wi-Fi white list</string>
    <string name="show_whitelist">White list</string>
    <string name="sure_delete">Are you sure you want to delete this Wi-Fi network?</string>

    <string name="pref_category_wireless_title">Wireless networks</string>
    <string name="pref_category_other_title">Other</string>

    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>

    <string name="disable_wireless">Disable wireless connections</string>
    <string name="end_time_next_day">Next day at %1$s</string>

    <string-array name="pref_repeatDisableWireless_entries">
        <item>Once</item>
        <item>Every day</item>
    </string-array>

    <string-array name="pref_repeatDisableWireless_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_repeatDisableWireless_default">0</string>

    <string name="repeat">Repeat</string>

    <string name="service_interval">Service run interval</string>

    <string-array name="pref_serviceRunInterval_entries">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>60 Minutes</item>
    </string-array>

    <string-array name="pref_serviceRunInterval_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_serviceRunInterval_default">0</string>

    <string name="pref_category_rules_title">Automatic rules</string>
    <string name="disable_bluetooth">Disable Bluetooth</string>

    <string name="send_log_via_email">Send log via E-Mail</string>
    <string name="cannot_find_email_app">Can\'t find E-Mail app</string>
    <string name="cannot_find_log_file">Can\'t find log file</string>

    <string name="enable_logging">Enable logging</string>

    <string name="pref_enableService_summary">Turn on Wi-Fi periodically for checking available networks.
    If any saved networks unavailable then turn off Wi-Fi for power saving</string>

    <string name="location_notification_title">Location is enabled</string>
    <string name="location_notification_content">If you aren\'t using GPS now, you should turn it off for battery saving</string>
    
    <string name="location">Location</string>
    <string name="pref_LocationNotification_summary">Show notification when Location is turned on</string>

</resources>
