<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.travinskiy.alex.universalcontroller.MainActivity">

    <CheckBox
        android:id="@+id/start_service_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/start_service"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <CheckBox
        android:id="@+id/stop_in_airplane_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/stop_service_in_airplane_mode"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <CheckBox
        android:id="@+id/enable_whitelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/enable_whitelist"/>

    <Button
        android:id="@+id/add_wifi_to_whitelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/add_current_wifi_to_whitelist"/>

    <Button
        android:id="@+id/show_whitelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/show_whitelist"/>

</LinearLayout>
